# kindling

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  kindling_PRD_v08.docx  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
bench/: _recbole_lightgcn.py  capture_channel_ablation.py  check_gate.py  ease_edlae_compare.py  ease_lambda_sweep.py  ease_variant_models.py  ease_variants.py  final_state_perf.py  gates.toml  gowalla_trim.py  native_recommend_parity.py  perf_smoke.py  plot_ease_family.py  plot_growth_curves.py  plot_onboarding.py  plot_user_warmth.py  plot_warming.py  recbole_runner.py  recbole_score.py  relabel_base_cooc.py  repeat_aware_compare.py  repeat_eval.py  repeat_freq_sweep.py  run_aisle_classify.py  run_aisle_recs.py  run_beauty_rerank.py  run_beauty_retrieval.py  run_book_academic.py  run_book_chrono.py  run_cold_coverage.py  run_cooc_smoothing.py  run_dataset_screen.py  run_ease_large.py  run_engine_impute.py  run_enrich_aisle.py  run_enrich_search.py  run_fpr_diag.py  run_fpr_probe.py  run_gap_decomp.py  run_graft_auc.py  (+22 more)
bench/cache/: amazon-book-chrono_aisle.jsonl  amazon-book-chrono_aisle_menu.json  ml1m_enrich_audience.jsonl  ml1m_enrich_co_audience.jsonl  ml1m_enrich_description.jsonl  ml1m_enrich_series.jsonl  ml1m_keywords.jsonl  ml1m_niche.jsonl  ml1m_user_profiles.jsonl  steam_keywords_sample.jsonl
bench/experiments/: smoothing_arch.py  smoothing_cap_drivers.py  smoothing_cooc_compare.py  smoothing_hotlayer.py  smoothing_hybrid.py
bench/reports/: ADR-baselines-comparison.md  ADR-growth-curves.md  ADR-lightgbm-warm-regime.md  ADR-lightgcn-numpy.md  ADR-pair-index-distinctiveness.md  ADR-persona-signal.md  ADR-phase3-default-likelihood.md  ADR-phase4-temperature-solver.md  ADR-phase7-cross-dataset.md  ADR-phase8-rust-decision.md  ADR-phase8-rust-evidence.md  ADR-rating-aware-signals.md  ADR-repeat-consumption.md  ADR-retriever-ranker-matrix.md  ADR-retriever-union.md  ADR-score-normalization.md  ADR-scoring-architecture.md  ADR-signal-audit.md  ADR-signals-and-growth.md  ADR-standalone-retrievers.md  GRAFT-REVISIT-FINDINGS.md  aisle_mapping_r2.json  aisle_recs.json  baselines_comparison.json  baselines_comparison_grocery.json  baselines_comparison_grocery_v2.json  beauty_rerank.json  beauty_rerank.txt  beauty_retrieval.json  beauty_retrieval.txt  book_chrono_recovery.txt  channel_ablation_amazon-beauty.json  channel_ablation_movielens-1m.json  cold_coverage_amazon-book-chrono.json  cold_coverage_book.txt  cold_coverage_ml-25m.json  cold_coverage_ml25m.txt  cold_coverage_steam.json  cold_coverage_steam.txt  cooc_smoothing.json  (+149 more)
docs/: EASE-LAMBDA.md  EASE-VARIANTS-ASSESSMENT.md  EXPERIMENTS.md  GOWALLA-TRIM-FINDINGS.md  HARNESS.md  LESSONS.md  NEXT-STEPS-HARDENING-PERF.md  PRODUCTION-CONSOLIDATION.md  PRODUCTION-SYSTEM.md  README.md  RECBOLE-COMPARISON.md  REFERENCE.md  RELEASING.md  REPEAT-FREQ-LAYER.md  REPEAT-GATE.md  RESULTS.md  RUST-ENGINE-PLAN.md  VALIDATION-hm.md  VALIDATION-retailrocket.md  VALIDATION-yelp2018.md  VALIDATION.md  announcement.md  hardening-worklog.md  migration-guide.md  transition-deletion-map.md  transition-worklog.md  tuning-guide.md  user-guide.md
docs/archive/: REPEAT-AWARE-FINDINGS.md  RUST-ENGINE-PLAN.md  SMOOTHING-ARCHITECTURE.md  force-projection-recommender-benchmark-prd.md
log_tensorboard/model-Jun-26-2026_08-08-42/: events.out.tfevents.1782475722.Awry-mini.local.1397.0
log_tensorboard/model-Jun-26-2026_08-08-50/: events.out.tfevents.1782475730.Awry-mini.local.1397.2
log_tensorboard/model-Jun-26-2026_08-08-58/: events.out.tfevents.1782475738.Awry-mini.local.1397.4
log_tensorboard/model-Jun-26-2026_08-09-26/: events.out.tfevents.1782475766.Awry-mini.local.1670.0
log_tensorboard/model-Jun-26-2026_08-10-48/: events.out.tfevents.1782475848.Awry-mini.local.1670.2
native/: Cargo.toml  pyproject.toml
native/.cargo/: config.toml
native/kindling_core/: Cargo.toml  pyproject.toml
native/kindling_core/src/: lib.rs
native/kindling_core/src/cluster/: dc_sbm.rs  hdbscan.rs  louvain.rs  mod.rs  user_user_graph.rs
native/kindling_core/src/engine/: channels.rs  mod.rs  native_state.rs  recommend.rs
native/kindling_core/src/loaders/: mod.rs
native/kindling_core/src/persona/: coherence.rs  fit_gate.rs  index.rs  mod.rs
native/kindling_core/src/repeat/: mod.rs  multiplier.rs  period.rs  profile.rs
native/kindling_core/src/retrieve/: mod.rs
native/kindling_core/src/score/: calibrator.rs  layered.rs  mod.rs
native/kindling_core/src/signals/: als.rs  cooc_transform.rs  cooccurrence.rs  cosine.rs  directional_cooc.rs  ease.rs  graph_mf.rs  interaction_network.rs  lightgcn.rs  metadata_knn.rs  mod.rs  path_family.rs  persona_cooccurrence.rs  session_cooccurrence.rs  svd.rs
native/kindling_native/: Cargo.toml
native/kindling_native/src/: cooccurrence.rs  dpp_kernel.rs  lib.rs  path_family.rs
native/src/: cooccurrence.rs  dedup.rs  lib.rs  personas.rs
scripts/: smoke.py
src/kindling/: __init__.py  _native.py  _native_engine.py  activation.py  cli.py  dense_content.py  engine.py  engine_v2.py  item_features.py  llm_enrich.py  persist.py  preprocess.py  serving.py  serving_app.py
tests/: conftest.py
tests/differential/: test_native_parity.py
tests/integration/: test_engine_v2.py  test_pipeline.py  test_serving.py
tests/property/: test_engine_invariants.py  test_item_graph_invariants.py
tests/unit/: test_activation.py  test_arrow_export.py  test_basket_pair_index.py  test_bayesian_blend.py  test_channel_gate.py  test_cli.py  test_cold_start.py  test_constraints.py  test_contract.py  test_cooc_impute.py  test_cooc_transform.py  test_cost_graph.py  test_decay.py  test_decorrelation.py  test_drift.py  test_edge_cases.py  test_engine.py  test_engine_phase2.py  test_extension_cap.py  test_gate.py  test_golden_scoring.py  test_harness_data.py  test_harness_eval.py  test_interaction_signals.py  test_item_features.py  test_item_graph.py  test_layered.py  test_layered_calibrator.py  test_lightgcn.py  test_loaders.py  test_metrics.py  (+26 more)
(+218 files in other folders)
