[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "kindling"
version = "1.0.0"
description = "A hybrid recommender system that grows with your data"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Robert Hoekstra", email = "rhoekstr@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.11",
    "pandas-stubs",
    "types-toml",
]
serve = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
bench = [
    "requests>=2.31",
    "tqdm>=4.66",
    "matplotlib>=3.8",
]
baselines = [
    "implicit>=0.7",
]
personas = [
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://github.com/rhoekstr/kindling"
Issues = "https://github.com/rhoekstr/kindling/issues"

[tool.maturin]
# Mixed Python/Rust: ship the pure-Python `kindling` package (from src/)
# AND the `kindling_core` Rust extension in a single wheel, so
# `pip install kindling` yields a working engine (the v2 engine requires
# the Rust core — there is no Python fallback).
python-source = "src"
module-name = "kindling._core"
manifest-path = "native/kindling_core/Cargo.toml"
strip = true


[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# Reproduction / investigation scripts for the smoothing work — kept for
# provenance, not held to lint/format standards.
extend-exclude = ["bench/experiments", "bench/run_graft_revisit.py"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes + pycodestyle
    "I",              # isort
    "B",              # bugbear
    "UP",             # pyupgrade
    "N",              # pep8-naming
    "SIM",            # simplify
    "RUF",            # ruff-specific
    "PL",             # pylint subset
    "PT",             # pytest
]
ignore = [
    "PLR0913",   # too many args (common in recommenders)
    "PLR2004",   # magic-value comparison (common in tests/bench)
    "E501",      # long lines handled by formatter
    "RUF001",    # ambiguous unicode in strings — intentional (→ ≤ § in docstrings)
    "RUF002",    # ambiguous unicode in docstrings — intentional
    "RUF003",    # ambiguous unicode in comments — intentional (engine annotations)
    "PLC0415",   # import-outside-top-level — intentional lazy imports (optional/heavy deps)
    "PLR0911",   # too many return statements (loader dispatch, channel gating)
    "PLR0912",   # too many branches (same)
    "PLR0915",   # too many statements (the engine fit path is inherently long)
    "B905",      # zip() without strict= — numpy-aligned zips, lengths are invariant
    "RUF059",    # unused unpacked variable — intentional `a, _ = f()` destructuring
    "RUF005",    # iterable-concat style preference
    "SIM108",    # if-else vs ternary style preference
    "PLR1714",   # repeated-equality vs set style preference
    "B007",      # unused loop control variable
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "N802", "PT018"]  # PT018: composite asserts read fine in tests
"src/kindling/benchmarks/**" = ["PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
files = ["src/kindling"]
plugins = []

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "kindling_core",        # PyO3 Rust extension — no py.typed stubs
    "kindling._core",
    "sklearn.*",            # optional metadata-smoothing dose fit — no stubs
    "implicit.*",           # bench-only ALS baseline (run_warming_curve) — no stubs
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: tests that take more than a few seconds",
    "integration: end-to-end integration tests",
    "bench: benchmark regression tests",
]
filterwarnings = [
    "error",
]

[tool.coverage.run]
source = ["src/kindling"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
