[package]
name = "kindling-native"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Native performance-critical kernels for kindling"

[lib]
name = "kindling_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
numpy = "0.22"
rustc-hash = "2.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
